// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentedButton should match selected button snapshot 1`] = `
<scale-segmented-button>
  <template shadowrootmode="open">
    <div aria-label="segment button with 2" class="segmented-button segmented-button--small" part="segmented-button small" role="group" style="grid-template-columns: repeat(2, auto);">
      <slot></slot>
    </div>
  </template>
  <scale-segment selected="">
    Label
  </scale-segment>
  <scale-segment>
    Label
  </scale-segment>
</scale-segmented-button>
`;

exports[`SegmentedButton should match standard snapshot 1`] = `
<scale-segmented-button>
  <template shadowrootmode="open">
    <div aria-label="segment button with 4" class="segmented-button segmented-button--small" part="segmented-button small" role="group" style="grid-template-columns: repeat(4, auto);">
      <slot></slot>
    </div>
  </template>
  <scale-segment>
    Label
  </scale-segment>
  <scale-segment>
    Label
  </scale-segment>
  <scale-segment>
    Label
  </scale-segment>
  <scale-segment>
    Label
  </scale-segment>
</scale-segmented-button>
`;
